--- a/XHapplyTs/files/images/Base.lproj/LaunchScreen.storyboard
+++ b/XHapplyTs/files/images/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,14 +18,28 @@
                         <viewControllerLayoutGuide type="bottom" id="St6-JV-e7J"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lauk" translatesAutoresizingMaskIntoConstraints="NO" id="zo5-id-stf">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zo5-id-stf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="BGR-NL-0ab"/>
+                            <constraint firstAttribute="bottom" secondItem="zo5-id-stf" secondAttribute="bottom" id="NIY-BL-iw8"/>
+                            <constraint firstAttribute="trailing" secondItem="zo5-id-stf" secondAttribute="trailing" id="mkk-CP-e1r"/>
+                            <constraint firstItem="zo5-id-stf" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="oAZ-vP-UwU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="lauk" width="750" height="1334"/>
+    </resources>
 </document>
